[package]
name = "poseidon-resonance"
version = "0.1.0"
license = "MIT-0"
authors = ["Resonance Network Developers <hello@resonancenetwork.io>"]
homepage = "https://resonancenetwork.io"
repository = "https://github.com/resonance-network/poseidon-resonance#"
edition = "2021"

[dependencies]
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-trie = { version = "38.0.0", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
serde = { version = "1.0.217", default-features = false, optional = true }
plonky2 = { git="https://github.com/Resonance-Network/plonky2", default-features = false, features = ["no_random"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-storage/std",
    "scale-info/std",
]

serde = [
    "dep:serde",
    "sp-runtime/serde",
    "sp-core/serde",
    "sp-storage/serde",
    "codec/serde",
    "scale-info/serde"
]